Monasca: Grafana 4 and improved Libvirt monitoring
This commit adds various patches to monasca-ui and
monasca-agent that improve Libvirt monitoring and allow for
visualizing metrics with (unpatched) Grafana 4.

Similar to its companion change in stable/ocata
(I11ff71fa45f4ec0c608118ad2370175aa24084ba), these patches did
not make it into stable/pike upstream due to stable/pike being
to old.

Change-Id: I2e8478fc8c59ad01f2563fbaff2646c66875011f

--- a/openstack/monasca-agent/monasca-agent.spec.j2
+++ b/openstack/monasca-agent/monasca-agent.spec.j2
@@ -33,6 +33,7 @@ Source1:        %{name}-sudoers
 Source2:        %{name}.service
 Source3:        %{name}.tmpfiles
 Source4:        %{name}.polkit
+Patch1:         libvirt-aggregate-status.patch
 BuildRequires:  openstack-macros
 BuildRequires:  {{ py2pkg('PyYAML') }}
 BuildRequires:  {{ py2pkg('devel') }}
@@ -113,7 +114,7 @@ sending them to the Monasca API.
 This package contains monasca-agent Python module.
 
 %prep
-%autosetup -n %{sname}-{{upstream_version}}
+%autosetup -p 1 -n %{sname}-{{upstream_version}}
 %py_req_cleanup
 # contains various binary files etc that we don't need
 rm -rf packaging/monasca-agent{,-deb}
