monasca: Unify /etc/monasca permissions
If a directory owned by different packages containts
different set of permissions, those packages become
non-coinstallable.

This patch unify the permissions and the ownership of
the directory /etc/monasca.

Change-Id: I94ecdffd4d0396adf5ca0fd0b6623df6211649b6
(cherry picked from commit 55d16f86bfa6fffe998bd8fd4d567d67e190999d)

--- a/openstack/monasca-agent/monasca-agent.spec.j2
+++ b/openstack/monasca-agent/monasca-agent.spec.j2
@@ -125,6 +125,7 @@ rm -rf packaging/monasca-agent{,-deb}
 %py2_install
 
 # /etc
+install -d -m 755 %{buildroot}%{_sysconfdir}/monasca
 install -d -m 750 %{buildroot}%{_sysconfdir}/monasca/agent/conf.d
 
 # /usr/lib
@@ -170,7 +171,7 @@ find . -type f -name '*test_service_plugin.py' -delete
 python setup.py test
 
 %files
-%dir %{_sysconfdir}/monasca
+%dir %attr(-, root, monasca) %{_sysconfdir}/monasca
 %dir %attr(0750, %{username}, %{groupname}) %{_sysconfdir}/monasca/agent
 %dir %attr(0750, %{username}, %{groupname}) %{_sysconfdir}/monasca/agent/conf.d
 %_tmpfilesdir/openstack-monasca-agent.conf
