--- a/openstack/osc-lib/osc-lib.spec.j2
+++ b/openstack/osc-lib/osc-lib.spec.j2
@@ -1,5 +1,5 @@
 {% set pypi_name = 'osc-lib' %}
-{% set upstream_version = upstream_version('1.7.0') %}
+{% set upstream_version = upstream_version('1.8.0') %}
 {% set rpm_release = '1' %}
 {% set source = url_pypi() %}
 
@@ -18,6 +18,7 @@ BuildRequires:  {{ py2pkg('cliff', py_versions=['py2', 'py3']) }}
 BuildRequires:  {{ py2pkg('fixtures', py_versions=['py2', 'py3']) }}
 BuildRequires:  {{ py2pkg('keystoneauth1', py_versions=['py2', 'py3']) }}
 BuildRequires:  {{ py2pkg('mock', py_versions=['py2', 'py3']) }}
+BuildRequires:  {{ py2pkg('openstacksdk', py_versions=['py2', 'py3']) }}
 BuildRequires:  {{ py2pkg('os-client-config', py_versions=['py2', 'py3']) }}
 BuildRequires:  {{ py2pkg('os-testr', py_versions=['py2', 'py3']) }}
 BuildRequires:  {{ py2pkg('oslo.i18n', py_versions=['py2', 'py3']) }}
@@ -35,6 +36,7 @@ BuildRequires:  {{ py2pkg('testtools', py_versions=['py2', 'py3']) }}
 Requires:       {{ py2pkg('Babel') }}
 Requires:       {{ py2pkg('cliff') }}
 Requires:       {{ py2pkg('keystoneauth1') }}
+Requires:       {{ py2pkg('openstacksdk') }}
 Requires:       {{ py2pkg('os-client-config') }}
 Requires:       {{ py2pkg('oslo.i18n') }}
 Requires:       {{ py2pkg('oslo.utils') }}
