--- a/openstack/python-glareclient/python-glareclient.spec.j2
+++ b/openstack/python-glareclient/python-glareclient.spec.j2
@@ -8,6 +8,8 @@ License:        {{ license('Apache-2.0') }}
 Group:          Development/Languages/Python
 URL:            https://launchpad.net/%{sname}
 Source0:        https://files.pythonhosted.org/packages/source/p/%{sname}/%{sname}-%{version}.tar.gz
+# https://review.openstack.org/#/c/532628/ -- needed for osc-lib >= 1.8
+Patch0:         0001-Rename-s-option-to-S.patch
 BuildRequires:  openstack-macros
 BuildRequires:  {{ py2pkg('PyYAML') }}
 BuildRequires:  {{ py2pkg('coverage') }}
@@ -49,7 +51,7 @@ Python bindings to the Glare Artifact Repository
 This package contains auto-generated documentation.
 
 %prep
-%autosetup -n %{sname}-%{version}
+%autosetup -p1 -n %{sname}-%{version}
 %py_req_cleanup
 
 %build
