--- a/openstack/oslo.policy/oslo.policy.spec.j2
+++ b/openstack/oslo.policy/oslo.policy.spec.j2
@@ -12,34 +12,44 @@ Group:          Development/Languages/Python
 URL:            https://launchpad.net/{{ pypi_name }}
 Source0:        {{ source }}
 BuildRequires:  openstack-macros
-BuildRequires:  {{ py2pkg('PyYAML') }}
-BuildRequires:  {{ py2pkg('devel') }}
-BuildRequires:  {{ py2pkg('oslo.config') }}
-BuildRequires:  {{ py2pkg('oslo.i18n') }}
-BuildRequires:  {{ py2pkg('oslo.serialization') }}
-BuildRequires:  {{ py2pkg('oslotest') }}
-BuildRequires:  {{ py2pkg('pbr') }}
-BuildRequires:  {{ py2pkg('requests') }}
-BuildRequires:  {{ py2pkg('requests-mock') }}
+BuildRequires:  {{ py2pkg('devel', py_versions=['py2', 'py3']) }}
+BuildRequires:  {{ py2pkg('PyYAML', py_versions=['py2', 'py3']) }}
+BuildRequires:  {{ py2pkg('oslo.config', py_versions=['py2', 'py3']) }}
+BuildRequires:  {{ py2pkg('oslo.i18n', py_versions=['py2', 'py3']) }}
+BuildRequires:  {{ py2pkg('oslo.serialization', py_versions=['py2', 'py3']) }}
+BuildRequires:  {{ py2pkg('oslotest', py_versions=['py2', 'py3']) }}
+BuildRequires:  {{ py2pkg('pbr', py_versions=['py2', 'py3']) }}
+BuildRequires:  {{ py2pkg('requests', py_versions=['py2', 'py3']) }}
+BuildRequires:  {{ py2pkg('requests-mock', py_versions=['py2', 'py3']) }}
 Requires:       {{ py2pkg('PyYAML') }}
 Requires:       {{ py2pkg('oslo.config') }}
 Requires:       {{ py2pkg('oslo.i18n') }}
 Requires:       {{ py2pkg('oslo.serialization') }}
 Requires:       {{ py2pkg('requests') }}
 Requires:       {{ py2pkg('six') }}
+Requires:       {{ py2pkg('stevedore') }}
 BuildArch:      noarch
+%if 0%{?suse_version}
+Requires(post): update-alternatives
+Requires(postun): update-alternatives
+%else
+# on RDO, update-alternatives is in chkconfig
+Requires(post): chkconfig
+Requires(postun): chkconfig
+%endif
+%python_subpackages
 
 %description
 The OpenStack Oslo Policy library.
 RBAC policy enforcement library for OpenStack.
 
-%package doc
+%package -n python-oslo.policy-doc
 Summary:        Documentation for the Oslo Policy library
 Group:          Documentation/HTML
 BuildRequires:  {{ py2pkg('Sphinx') }}
 BuildRequires:  {{ py2pkg('openstackdocstheme') }}
 
-%description doc
+%description -n python-oslo.policy-doc
 Documentation for the Oslo Policy library.
 
 %prep
@@ -48,7 +58,7 @@ Documentation for the Oslo Policy library.
 sed -i 's/^warning-is-error.*/warning-is-error = 0/g' setup.cfg
 
 %build
-%{py2_build}
+%{python_build}
 
 # generate html docs
 %{__python2} setup.py build_sphinx
@@ -56,22 +66,34 @@ sed -i 's/^warning-is-error.*/warning-is-error = 0/g' setup.cfg
 rm -rf doc/build/html/.{doctrees,buildinfo}
 
 %install
-%{py2_install}
+%{python_install}
+%python_clone -a %{buildroot}%{_bindir}/oslopolicy-checker
+%python_clone -a %{buildroot}%{_bindir}/oslopolicy-list-redundant
+%python_clone -a %{buildroot}%{_bindir}/oslopolicy-policy-generator
+%python_clone -a %{buildroot}%{_bindir}/oslopolicy-sample-generator
+
+%post
+%{python_install_alternative oslopolicy-checker oslopolicy-list-redundant oslopolicy-policy-generator oslopolicy-sample-generator}
+
+%postun
+%python_uninstall_alternative oslopolicy-checker
 
 %check
-%{__python2} setup.py testr
+%{python_expand rm -rf .testrepository
+python setup.py testr
+}
 
-%files
+%files %{python_files}
 %license LICENSE
 %doc README.rst
-%{_bindir}/oslopolicy-checker
-%{_bindir}/oslopolicy-list-redundant
-%{_bindir}/oslopolicy-policy-generator
-%{_bindir}/oslopolicy-sample-generator
-%{python2_sitelib}/oslo_policy
-%{python2_sitelib}/*.egg-info
+%python_alternative %{_bindir}/oslopolicy-checker
+%python_alternative %{_bindir}/oslopolicy-list-redundant
+%python_alternative %{_bindir}/oslopolicy-policy-generator
+%python_alternative %{_bindir}/oslopolicy-sample-generator
+%{python_sitelib}/oslo_policy
+%{python_sitelib}/*.egg-info
 
-%files doc
+%files -n python-oslo.policy-doc
 %license LICENSE
 %doc doc/build/html
 
